Actualizando y creando una nueva lista

--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
 <body>
      <ul>
          <li> Vagrant </li>
-         <li> Docker </li>
+         <li> Docker - creando contenedores si perder la cabeza</li>
          <li> Ansible </li>
          <li> Integración Continua: Madurez y reproductividad en el Desarrollo de software </li>
          <li>prueba</li>
+         <li>git</li>
      </ul>
 </body>
 </html>
