--- a/index.html
+++ b/index.html
@@ -2,16 +2,14 @@
 <html lang = "en">
 <head>
      <meta charset = "UTF-8">
-     <title> Cursos de Alura - prueba de hernan</title>
+     <title> Cursos de Alura </title>
 </head>
 <body>
      <ul>
          <li> Vagrant </li>
-         <li> Docker - creando contenedores si perder la cabeza</li>
+         <li> Docker</li>
          <li> Ansible </li>
          <li> Integración Continua: Madurez y reproductividad en el Desarrollo de software </li>
-         <li>prueba</li>
-         <li>git</li>
      </ul>
 </body>
 </html>
