--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <body>
      <ul>
-         <li>Vagrant</li>
+         <li>Vagrant: gerenciando máquinas virtuales</li>
          <li>Docker: Creando containers sin dolor de cabeza</li>
          <li>Ansible</li>
          <li>Integración Continua: Madurez y reproductividad en el Desarrollo de software</li>
