--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
      <ul>
          <li>Vagrant: gerenciando máquinas virtuales</li>
          <li>Docker: Creando containers sin dolor de cabeza</li>
-         <li>Ansible: infraestructura como código</li>
+         <li>Ansible</li>
          <li>Integración Continua: Madurez y reproductividad en el Desarrollo de software</li>
      </ul>
 </body>
